<resources>
    <string name="app_name">oblig3android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="patient_list">Patient list</string>
    <string name="choose_patient">Chose patient</string>

    <!-- Fragment logg symptoms -->
    <string name="register_symptoms">Register symptoms</string>
    <string name="fever">Fever</string>
    <string name="coughing">Coughing</string>
    <string name="tiredness">Tiredness</string>
    <string name="loss_of_taste_and_or_smell">Loss of taste and/or smell</string>
    <string name="sore_throat">Sore throat</string>
    <string name="headache">Headache</string>
    <string name="aches_and_pains">Aches and pains</string>
    <string name="diarrhoa">Diarrhoa</string>
    <string name="rashes_or_discoloration">Rashes or discoloration</string>
    <string name="breathing_complication">Breathing complication</string>
    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="element_text">\"\"</string>
    <string name="register_symptoms_button">Select</string>
    <string name="add_patient">Add patient</string>
    <string name="delete_patient_button">delete</string>
    <string name="update_patient_button"/>
    <string name="update_pat_button">update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_ssn_hint">Enter ssn</string>
    <string name="new_ward_hint">Ward ID</string>
    <string name="update_patient"/>
    <string name="update_pat">Update</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>

</resources>